--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -273,7 +273,7 @@ bindsym $mod+Shift+d exec --no-startup-id rofi -show window
 bindsym $mod+Shift+b exec chrome-stable
 
 # File manager
-bindsym $mod+Shift+f exec pcmanfm
+bindsym $mod+Shift+f exec alacritty -e lf
 
 # Screenshot (flameshot)
 bindsym Print exec --no-startup-id flameshot gui
@@ -371,7 +371,6 @@ for_window [class="Code"]          floating disable
 for_window [class="code-oss"]      floating disable
 for_window [class="Google-chrome"] floating disable
 for_window [class="Chromium"]      floating disable
-for_window [class="Pcmanfm"]       floating disable
 
 # ============================================
 # SCRATCHPAD
