--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -273,7 +273,7 @@ bindsym $mod+Shift+d exec --no-startup-id rofi -show window
 bindsym $mod+Shift+b exec chrome-stable
 
 # File manager
-bindsym $mod+Shift+f exec alacritty -e lf
+bindsym $mod+Shift+f exec --no-startup-id alacritty -e /home/nathan/.local/bin/lfw
 
 # Screenshot (flameshot)
 bindsym Print exec --no-startup-id flameshot gui
