--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -67,8 +67,8 @@ font-3 = Font Awesome 6 Brands:size=11;3
 
 ; Workspaces dos dois lados + ícones em cada módulo!
 modules-left = i3 xwindow
-modules-center = date
-modules-right = i3-right updates filesystem pulseaudio memory cpu gputemp docker powermenu
+modules-center = date music
+modules-right = updates filesystem pulseaudio memory cpu gputemp docker powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -299,6 +299,22 @@ menu-0-2 =  logout
 menu-0-2-exec = i3-msg exit
 menu-0-3 =  lock
 menu-0-3-exec = i3lock -c 1a1b26
+
+;==========================================================
+; MÓDULO: MUSIC
+;==========================================================
+
+[module/music]
+type = custom/script
+exec = ~/.config/polybar/scripts/mpd_playerctl.sh
+interval = 1
+
+click-left = sh -lc 'p=$(playerctl -l | grep "^mpd" | head -n1); [ -n "$p" ] && playerctl --player="$p" play-pause'
+click-right = sh -lc 'p=$(playerctl -l | grep "^mpd" | head -n1); [ -n "$p" ] && playerctl --player="$p" next'
+click-middle = sh -lc 'p=$(playerctl -l | grep "^mpd" | head -n1); [ -n "$p" ] && playerctl --player="$p" previous'
+
+scroll-up = sh -lc 'p=$(playerctl -l | grep "^mpd" | head -n1); [ -n "$p" ] && playerctl --player="$p" volume 0.05+'
+scroll-down = sh -lc 'p=$(playerctl -l | grep "^mpd" | head -n1); [ -n "$p" ] && playerctl --player="$p" volume 0.05-'
 
 ;==========================================================
 ; CONFIGURAÇÕES
